# Unupdated_Accelerated_Simulation_of_Cardiac_Arrhythmias

./: .gitignore  CMakeLists.txt  DockerFile  README.md
docs/: REFERENCES.md
include/solvers/: AlievPanfilov.hpp  EulerExplicite.hpp  Methods.hpp  ProjectiveIntegrator.hpp  RK4.hpp
prototypes/: 01_ap_dog_baseline.py  02_ap_parameters_sensitivity.py  03_1D_theory_vs_comp.py  README.md
src/solvers/: AlievPanfilov.cpp  ExplicitEuler.cpp  RK4.cpp
